GNIJ-61 Fixed bug were carousel images not fitted in viewport

--- a/src/scss/nijmegen/carousel.scss
+++ b/src/scss/nijmegen/carousel.scss
@@ -49,4 +49,9 @@
             background-color: color('shades', 'white');
         }
     }
+    
+    .carousel-item img {
+        width: 100%;
+        align-self: center;
+    }
 }
